# simple-package-build

./: LICENSE  README.md  pyproject.toml  requirements.txt
requirements/: dev.in  dev.txt
src/package/: __init__.py
tests/: test_package.py
