[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "package"
version = "0.1.0"
authors = [
  { name="Alex Macniven", email="alex_macniven@icloud.com" },
]
description = "A simple package with build."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [

]

[project.urls]
"Homepage" = "https://github.com/alexmacniven/"
"Bug Tracker" = "https://github.com/alexmacniven//issues"